--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<!--
-	5    <dependency>
-	6        <groupId>org.springframework.boot</groupId>
-	7        <artifactId>spring-boot-starter-security</artifactId>
-	8    </dependency>
-	9    -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
