--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 spring.application.name=web
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_web
-spring.datasource.username=postgres
-spring.datasource.password=12345
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_web
+#spring.datasource.username=postgres
+#spring.datasource.password=12345
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
+#spring.jpa.hibernate.ddl-auto=update
+#logging.level.org.springframework.security.web.*=debug
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.application.name=web
+spring.datasource.url=jdbc:mysql://localhost:3306/db_web2
+spring.datasource.username=root
+spring.datasource.password=mafe0326
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework.security.web.*=debug
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
