--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,41 @@
 spring.application.name=web
 
 # Database
-#spring.datasource.url=jdbc:postgresql://localhost:5432/db_web
-#spring.datasource.username=postgres
-#spring.datasource.password=12345
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_web
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.springframework.security.web.*=debug
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/db_web2
+#spring.datasource.username=root
+#spring.datasource.password=mafe0326
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto=update
-#logging.level.org.springframework.security.web.*=debug
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-spring.datasource.url=jdbc:mysql://localhost:3306/db_web2
-spring.datasource.username=root
-spring.datasource.password=mafe0326
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
 
 # Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html;charset=UTF-8
+
+# Swagger UI custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Ordenar endpoints alfabéticamente
+springdoc.swagger-ui.operationsSorter=alpha
+
+# Establecer el try-it-out por defecto como expandido
+springdoc.swagger-ui.tryItOutEnabled=true
+
+# Deshabilitar petitions por defecto
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
+
+# URL del API docs en formato JSON
+springdoc.api-docs.path=/api-docs
